--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
   <distributionManagement>
 
 		<repository>
-			<id>Maven-release</id>
-			<url>C:\Users\Deepu\Desktop\Maven_learning\maventest\repo\Maven-release</url>
+			<id>package</id>
+			<url>http://54.173.32.77:8081/repository/package/</url>
 		</repository>
 		<snapshotRepository>
-			<id>Maven-snapshot</id>
-			<url>C:\Users\Deepu\Desktop\Maven_learning\maventest\repo\Maven-snapshot</url>
+			<id>snapshots</id>
+			<url>http://54.173.32.77:8081/repository/snapshots/</url>
 		</snapshotRepository>		
   </distributionManagement>
 </project>
